[package]
name = "tumblr-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
itoa = "1.0.11"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "fs"] }
tumblr = { path = "../tumblr" }
url = "2.5.2"
