[package]
name = "tumblr"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.11"
once_cell = "1.20.1"
reqwest = { version = "0.12.7", features = [ "http2", "json", "cookies" ], default-features = false }
scraper = { version = "0.20.0", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
time = { version = "0.3.36", features = [ "serde" ] }
tokio = "1.40.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
