[package]
name = "tumblr"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.14"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = [ "http2", "json", "cookies" ], default-features = false }
scraper = { version = "0.21.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
time = { version = "0.3.36", features = [ "serde" ] }
tokio = "1.41.1"

[dev-dependencies]
tokio = { version = "1.41.1", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
